# notebook-to-prod

./: .env.template  .gitignore  Dockerfile.api  Dockerfile.train  Makefile  README.md  pyproject.toml  requirements.api.txt  requirements.train.txt
api/: main.py
core/: config.py  model.py  pipeline.py  schemas.py  validation.py
training/: data.py  evaluate.py  main.py
